compiler/mesh-parser/tests/snapshots/parser_tests__from_import_paren.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
assertion_line: 587
expression: "source_and_debug(\"from Math import (sqrt, pow)\")"
---
SOURCE_FILE@0..24
  FROM_IMPORT_DECL@0..24
    IDENT@0..4 "from"
    PATH@4..8
      IDENT@4..8 "Math"
    IMPORT_KW@8..14 "import"
    IMPORT_LIST@14..24
      L_PAREN@14..15 "("
      NAME@15..19
        IDENT@15..19 "sqrt"
      COMMA@19..20 ","
      NAME@20..23
        IDENT@20..23 "pow"
      R_PAREN@23..24 ")"
  EOF@24..24 ""
