compiler/mesh-parser/tests/snapshots/parser_tests__from_import_paren_multiline.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
assertion_line: 597
expression: "source_and_debug(\"from Math import (\\n  sqrt,\\n  pow\\n)\")"
---
SOURCE_FILE@0..27
  FROM_IMPORT_DECL@0..27
    IDENT@0..4 "from"
    PATH@4..8
      IDENT@4..8 "Math"
    IMPORT_KW@8..14 "import"
    IMPORT_LIST@14..27
      L_PAREN@14..15 "("
      NAME@15..20
        NEWLINE@15..16 "\n"
        IDENT@16..20 "sqrt"
      COMMA@20..21 ","
      NAME@21..25
        NEWLINE@21..22 "\n"
        IDENT@22..25 "pow"
      NEWLINE@25..26 "\n"
      R_PAREN@26..27 ")"
  EOF@27..27 ""
