compiler/mesh-parser/tests/snapshots/parser_tests__from_import_paren_trailing_comma.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
assertion_line: 592
expression: "source_and_debug(\"from Math import (sqrt, pow,)\")"
---
SOURCE_FILE@0..25
  FROM_IMPORT_DECL@0..25
    IDENT@0..4 "from"
    PATH@4..8
      IDENT@4..8 "Math"
    IMPORT_KW@8..14 "import"
    IMPORT_LIST@14..25
      L_PAREN@14..15 "("
      NAME@15..19
        IDENT@15..19 "sqrt"
      COMMA@19..20 ","
      NAME@20..23
        IDENT@20..23 "pow"
      COMMA@23..24 ","
      R_PAREN@24..25 ")"
  EOF@25..25 ""
